[gd_scene load_steps=6 format=3 uid="uid://cgllsgbr03iyy"]

[ext_resource type="Script" path="res://Scripts/Managers/MultiplayerManager.gd" id="1_tc62f"]
[ext_resource type="PackedScene" uid="uid://c7jlde1hk6v65" path="res://Scenes/csg_environment.tscn" id="3_hjsfh"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_84yjr"]
sky_top_color = Color(0.823529, 0.886275, 0.968627, 1)
sky_horizon_color = Color(0.772549, 0.778431, 0.787255, 1)
sky_energy_multiplier = 1.25
ground_bottom_color = Color(0.266667, 0.227451, 0.180392, 1)
ground_horizon_color = Color(0.772549, 0.778431, 0.787255, 1)

[sub_resource type="Sky" id="Sky_rs370"]
sky_material = SubResource("ProceduralSkyMaterial_84yjr")

[sub_resource type="Environment" id="Environment_u8hpd"]
background_mode = 2
sky = SubResource("Sky_rs370")
tonemap_mode = 2
glow_enabled = true

[node name="Main" type="Node3D"]
script = ExtResource("1_tc62f")

[node name="MultiplayerManager" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_u8hpd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.931056, -0.27621, 0.238418, 0, 0.653421, 0.756995, -0.364877, 0.704805, -0.608371, 0, 0, 0)
light_color = Color(1, 1, 0.870588, 1)
shadow_enabled = true

[node name="CSGEnvironment" parent="." instance=ExtResource("3_hjsfh")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/player.tscn")
spawn_path = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 406.0
offset_top = 229.0
offset_right = -406.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AddressHost" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -34.0
offset_right = 321.0
offset_bottom = -11.0
grow_vertical = 0

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
